--- a/themes/phantom/source/sass/layout/_footer.scss
+++ b/themes/phantom/source/sass/layout/_footer.scss
@@ -21,6 +21,7 @@
 				margin-bottom: 0;
 			}
 
+/*
 			section:nth-child(1) {
 				width: calc(66% - #{$gutter});
 				margin-right: $gutter;
@@ -29,6 +30,21 @@
 			section:nth-child(2) {
 				width: calc(33% - #{$gutter});
 				margin-left: $gutter;
+			}
+*/
+
+			@include vendor('flex-direction', 'column');
+
+			section:nth-child(1) {
+				width: 100%;
+				margin-right: 0;
+				margin: 3em 0 0 0;
+			}
+
+			section:nth-child(2) {
+				@include vendor('order', '-1');
+				width: 100%;
+				margin-left: 0;
 			}
 
 			.copyright {
@@ -65,6 +81,7 @@
 			@include padding(5em, 0);
 
 			> .inner {
+				/*
 				section:nth-child(1) {
 					width: calc(66% - #{$gutter});
 					margin-right: $gutter;
@@ -74,6 +91,21 @@
 					width: calc(33% - #{$gutter});
 					margin-left: $gutter;
 				}
+				*/
+
+				@include vendor('flex-direction', 'column');
+
+				section:nth-child(1) {
+					width: 100%;
+					margin-right: 0;
+					margin: 3em 0 0 0;
+				}
+
+				section:nth-child(2) {
+					@include vendor('order', '-1');
+					width: 100%;
+					margin-left: 0;
+				}
 			}
 		}
 
@@ -81,6 +113,7 @@
 			$gutter: _size(gutter);
 
 			> .inner {
+				/*
 				section:nth-child(1) {
 					width: 66%;
 					margin-right: 0;
@@ -89,6 +122,21 @@
 				section:nth-child(2) {
 					width: calc(33% - #{$gutter});
 					margin-left: $gutter;
+				}
+				*/
+
+				@include vendor('flex-direction', 'column');
+
+				section:nth-child(1) {
+					width: 100%;
+					margin-right: 0;
+					margin: 3em 0 0 0;
+				}
+
+				section:nth-child(2) {
+					@include vendor('order', '-1');
+					width: 100%;
+					margin-left: 0;
 				}
 			}
 		}
